fix z-index level

--- a/airflow/www_rbac/static/css/main.css
+++ b/airflow/www_rbac/static/css/main.css
@@ -28,7 +28,7 @@ a.navbar-brand span {
     color: white;
 }
 .modal-backdrop{
-    z-index: 0;
+    z-index: 2;
     position: fixed;
 }
 .modal-content{
